mi primer commit

--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-5">
+                        <div class="col-12 col-md-5">
                             <div class="form-group mb-3 p-2">
                                 <label class="form-label" for="card">Card #</label>
                                 <input type="text" class="form-control p-2" name="card" id="card" required tabindex="1"
                                     maxlength="20" placeholder="XXXX-XXXX-XXXX-XXXX" />
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-12 col-md-3">
                             <div class="form-group mb-3 p-2">
                                 <label class="form-label" for="cvc">CVC #</label>
                                 <input type="text" class="form-control p-2" name="cvc" id="cvc" required tabindex="2"
                                     maxlength="20" placeholder="0000" />
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-12 col-md-4">
                             <div class="input-group mb-3 p-2">
                                 <label class="form-label input-group" for="amount">Amount</label>
                                 <span class="input-group-text">$</span>
@@ -50,14 +50,14 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-12 col-md-6">
                             <div class="form-group mb-3 p-2">
                                 <label class="form-label" for="firstname">First Name</label>
                                 <input type="text" class="form-control p-2" name="firstname" id="firstname" required
                                     tabindex="4" maxlength="40" />
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-12 col-md-6">
                             <div class="form-group mb-3 p-2">
                                 <label class="form-label" for="lastname">Last Name</label>
                                 <input type="text" class="form-control p-2" name="lastname" id="lastname" required
@@ -66,7 +66,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-12 col-md-6">
                             <div class="form-group mb-3 p-2">
                                 <label class="form-label" for="city">City</label>
                                 <input type="text" class="form-control p-2" name="city" id="city" required tabindex="6"
@@ -74,7 +74,7 @@
                             </div>
 
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-12 col-md-3">
                             <div class="form-group mb-3 p-2">
                                 <label class="form-label" for="state">State</label>
                                 <select class="form-select p-2" name="state" id="state" required tabindex="7">
@@ -83,7 +83,7 @@
                                 </select>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-12 col-md-3">
                             <div class="form-group mb-3 p-2">
                                 <label class="form-label" for="postalcode">Postal Code</label>
                                 <input type="text" class="form-control p-2" name="postalcode" id="postalcode" required
@@ -92,7 +92,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-3 ">
+                        <div class="col-12 col-md-3 ">
                             <label class="form-check-label " for="description">We accept:</label>
                             <div class="form-group mb-3 text-center p-2 bg-secondary">
                                 <div class="form-check form-check-inline">
@@ -125,7 +125,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6 offset-md-3">
+                        <div class="col-12 col-md-6 offset-md-3">
                             <div class="form-group  p-2">
                                 <label for="message" class="form-label">Message</label>
                                 <textarea class="form-control" id="message" name="message"
